// python -m grpc_tools.protoc -I. --python_out=./base_package --grpc_python_out=./base_package ./data.proto


syntax = "proto3";
package base_package;


service FormatData {   //定义服务,用在rpc传输中
  rpc DoFormat(actionrequest) returns (actionresponse){}
}
message actionrequest {
  string text=1;
}
message actionresponse{
  string text=1;
}
